--- a/src/01-Basics/Identity/Views/Role/Index.cshtml
+++ b/src/01-Basics/Identity/Views/Role/Index.cshtml
@@ -5,23 +5,23 @@
     ViewData["Title"] = "Roles";
 }
 
-<div class="container mt-4">
+<div class="container">
     <div class="row mb-4">
-        <div class="col-sm-12 text-end">
-            <a asp-action="Create" class="btn btn-success shadow-sm">
-                <i class="fas fa-plus"></i> 新增角色
+        <div class="col text-end">
+            <a asp-action="Create" class="btn btn-success">
+                <i class="bi bi-plus-lg"></i> 新增角色
             </a>
         </div>
     </div>
-        <div class="card-body">
-            <div class="table-responsive">
-                 <table class="table table-striped table-hover table-bordered align-middle">
-                    <thead class="table-dark">
+    <div class="row">
+        <div class="col">
+            <table class="table table-striped table-hover table-bordered align-middle radius">
+                    <thead class="table-gray">
                         <tr>
-                            <th>编号</th>
-                            <th>角色名称</th>
-                            <th style="width: 100px;">编辑</th>
-                            <th style="width: 100px;">删除</th>
+                            <th scope="col">编号</th>
+                            <th scope="col">角色名称</th>
+                            <th scope="col">编辑</th>
+                            <th scope="col">删除</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -30,15 +30,15 @@
                             <tr>
                                 <td>@role.Id</td>
                                 <td>@role.Name</td>
-                                <td style="width: 100px;">
+                                <td>
                                     <a class="btn btn-sm btn-warning" asp-action="Update" asp-route-id="@role.Id">
-                                        <i class="fas fa-edit"></i> 编辑
+                                        <i class="bi bi-pencil-square"></i> 编辑
                                     </a>
                                 </td>
-                                <td style="width: 100px;">
+                                <td>
                                     <form method="post" asp-action="Delete" asp-route-id="@role.Id" onsubmit="return confirm('确定要删除该角色吗？');">
                                         <button type="submit" class="btn btn-sm btn-danger">
-                                            <i class="fas fa-trash"></i> 删除
+                                            <i class="bi bi-trash"></i> 删除
                                         </button>
                                     </form>
                                 </td>
@@ -50,6 +50,3 @@
         </div>
     </div>
 </div>
-
-<!-- 引入 FontAwesome 图标支持 -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
